[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/backgrounds/phone.png" type="Texture" id=1]
[ext_resource path="res://fonts/other.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/backgrounds/cockpit.png" type="Texture" id=3]
[ext_resource path="res://objects/phone/PhoneResponse.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/phone/Phone.gd" type="Script" id=5]

[node name="Phone" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cockpit" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Phone" type="TextureRect" parent="."]
margin_left = 172.0
margin_top = 210.0
margin_right = 236.0
margin_bottom = 338.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Message" type="Label" parent="Phone"]
margin_left = 10.0
margin_top = 16.0
margin_right = 98.0
margin_bottom = 176.0
rect_min_size = Vector2( 88, 160 )
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 0.639216 )
text = "Can you believe they DELAYED the release for Stellar Conflict Episode 28??? AGAIN!?"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Responses" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = -160.0
margin_right = 164.0
rect_min_size = Vector2( 160, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Response1" parent="Responses" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 40.0

[node name="Response2" parent="Responses" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 160.0
margin_bottom = 84.0

[node name="Response3" parent="Responses" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 88.0
margin_right = 160.0
margin_bottom = 128.0

[node name="Tween" type="Tween" parent="."]
